--- a/index.html
+++ b/index.html
@@ -83,9 +83,62 @@
                         <br>
                         <span class="harga">Rp 842.000</span>
                         <br>
-                        4031 Diamonds   : 
+                        <a class="pesan" href="https://wa.me/6285156290127" 
+                        target="_blank" 
+                        rel="noopener noreferrer"><img src="./images/whatsapp.png" alt="">Pesan Sekarang</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="ff">
+            <div class="link">
+                <a href="#harga-ff">
+                        <img src="./images/ff.png" alt="">
+                        <div class="judul-produk">Free Fire</div>
+                </a>
+            </div>
+            <div class="overlay" id="harga-ff">
+                <div class="popup">
+                    <h2>HARGA FREE FIRE</h2>
+                    <a class="close" href="#populer">&times;</a>
+                    <br>
+                    <div class="content">
+                        70 Diamonds  : 
+                        <br>    
+                        <span class="harga">Rp 9.300</span>
                         <br>
-                        <span class="harga">Rp 923.000</span>
+                        140 Diamonds : 
+                        <br>
+                        <span class="harga">Rp 18.600</span>
+                        <br>
+                        210 Diamonds : 
+                        <br>
+                        <span class="harga">Rp 27.900</span>
+                        <br>
+                        355 Diamonds : 
+                        <br>
+                        <span class="harga">Rp 46.500</span>
+                        <br>
+                        495 Diamond  : 
+                        <br>
+                        <span class="harga">Rp 65.200</span>
+                        <br>
+                        720 Diamonds : 
+                        <br>
+                        <span class="harga">Rp 93.000</span>
+                        <br>
+                        1440 Diamonds : 
+                        <br>
+                        <span class="harga">Rp 186.100</span>
+                        <br>
+                        M. Mingguan  : 
+                        <br>
+                        <span class="harga">Rp 28.200</span>
+                        <br>
+                        M. Bulanan   : 
+                        <br>
+                        <span class="harga">Rp 84.600</span>
                         <br>
                         <a class="pesan" href="https://wa.me/6285156290127" 
                         target="_blank" 
