--- a/harga/hdi.html
+++ b/harga/hdi.html
@@ -10,7 +10,7 @@
 <body>
     <section class="list-ff">
         <div class="container">
-            <h1 class="title__list">LIST HARGA LENGKAP <span class="th">HIGGS DOMINO ZEYNOSTORE</span></h1>            
+            <h1 class="title__list">LIST HARGA LENGKAP <span class="th">HIGGS DOMINO 3RSTOREE</span></h1>            
             <table border="5" class="table">
                 <tr>
                     <th class="th">NOMINAL</th>
