--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div class="swiper">
         <div class="swiper-wrapper">
 
-          <div class="swiper-slide"><img src="images/slide-1.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="images/slide-1.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="images/M4 Pass.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="images/Event m4 pass.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="images/Batrix_M4.jpg" alt=""></div>
           
         </div>
 
