--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="swiper-wrapper">
 
           <div class="swiper-slide"><img src="images/M4 Pass.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="images/Event m4 pass.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="images/BETRIX.jpg" alt=""></div>
           <div class="swiper-slide"><img src="images/Batrix_M4.jpg" alt=""></div>
           
         </div>
