--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
 <!-- start header -->
     <header>
-        <a href="" class="title">3RSTOREE</a>
+        <div class="brand">
+            <div class="firstname">3R</div>
+             <div class="lastname">STOREE</div>
+        </div>
         <input type="search" name="" id="" class="search-input" placeholder="Cari sesuatu disini...">
         <button type="submit" class="search-submit">CARI</button>
         <nav>
@@ -21,6 +24,7 @@
                 <li><a class="menu" href="#produk">PRODUK</a></li>
                 <li><a class="menu" href="#tentang">TENTANG</a></li>
                 <li><a class="menu" href="#kontak">KONTAK</a></li>
+                <li><img src="images/harith.gif" alt=""/></li>
             </ul>
         </nav>
     </header>
