--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="swiper">
         <div class="swiper-wrapper">
 
-          <div class="swiper-slide"><img src="images/M4 Pass.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="images/M4-World-Championship.jpg" alt=""></div>
           <div class="swiper-slide"><img src="images/BETRIX.jpg" alt=""></div>
           <div class="swiper-slide"><img src="images/Batrix_M4.jpg" alt=""></div>
           
@@ -128,11 +128,11 @@
                     <div class="content">
                         86 Diamonds  : 
                         <br>    
-                        <span class="harga">Rp 20.000</span>
+                        <span class="harga">Rp 19.500</span>
                         <br>
                         172 Diamonds : 
                         <br>
-                        <span class="harga">Rp 39.000</span>
+                        <span class="harga">Rp 39.500</span>
                         <br>
                         257 Diamonds : 
                         <br>
@@ -140,7 +140,7 @@
                         <br>
                         344 Diamonds : 
                         <br>
-                        <span class="harga">Rp 78.000</span>
+                        <span class="harga">Rp 78.500</span>
                         <br>
                         514 Diamonds : 
                         <br>
@@ -148,7 +148,7 @@
                         <br>
                         706 Diamond  : 
                         <br>
-                        <span class="harga">Rp 157.000</span>
+                        <span class="harga">Rp 158.000</span>
                         <br>
                         Starlight : 
                         <br>
