--- a/harga/mlbb.html
+++ b/harga/mlbb.html
@@ -29,8 +29,10 @@
                     <td>257 Diamonds</td>
                     <td>Rp 59.000</td>
                 </tr>
+                <tr>
                     <td>344 Diamonds</td>
                     <td>Rp 78.500</td>
+                </tr>
                 <tr>
                     <td>429 Diamonds</td>
                     <td>Rp 98.500</td>
@@ -71,11 +73,17 @@
                     <td>5532 Diamonds</td>
                     <td>Rp 1.185.500</td>
                 </tr>
+                <tr>
                     <td>6238 Diamonds</td>
                     <td>Rp 1.343.500</td>
+                </tr>
                 <tr>
                     <td>9288 Diamonds</td>
                     <td>Rp 1.972.000</td>
+                </tr>
+                <tr>
+                    <td>12188 Diamonds</td>
+                    <td>Rp 2.604.000</td>
                 </tr>
                 <tr>
                     <td>18576 Diamonds</td>
