--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a class="menu" href="#produk">PRODUK</a></li>
                 <li><a class="menu" href="#tentang">TENTANG</a></li>
                 <li><a class="menu" href="#kontak">KONTAK</a></li>
-                <li><img src="images/harith.gif" alt=""/></li>
+                <li><img src="images/jempol.gif" alt=""/></li>
             </ul>
         </nav>
     </header>
@@ -37,9 +37,9 @@
     <div class="swiper">
         <div class="swiper-wrapper">
 
-          <div class="swiper-slide"><img src="images/M4-World-Championship.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="images/BETRIX.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="images/Batrix_M4.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="images/jujutsu_kaisen.png" alt=""></div>
+          <div class="swiper-slide"><img src="images/mobile LEGEND JJK.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="images/jujutsu-kaisen-skin-mobile-legends.jpg" alt=""></div>
           
         </div>
 
