--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="content">
                         86 Diamonds  : 
                         <br>    
-                        <span class="harga">Rp 19.500</span>
+                        <span class="harga">Rp 20.000</span>
                         <br>
                         172 Diamonds : 
                         <br>
@@ -136,23 +136,23 @@
                         <br>
                         257 Diamonds : 
                         <br>
-                        <span class="harga">Rp 59.000</span>
+                        <span class="harga">Rp 58.000</span>
                         <br>
                         344 Diamonds : 
                         <br>
-                        <span class="harga">Rp 78.500</span>
+                        <span class="harga">Rp 77.000</span>
                         <br>
                         514 Diamonds : 
                         <br>
-                        <span class="harga">Rp 118.000</span>
+                        <span class="harga">Rp 116.000</span>
                         <br>
                         706 Diamond  : 
                         <br>
-                        <span class="harga">Rp 158.000</span>
+                        <span class="harga">Rp 155.500</span>
                         <br>
-                        Starlight : 
+                        Weekly Pass Diamond : 
                         <br>
-                        <span class="harga">KOSONG</span>
+                        <span class="harga">Rp 27.500</span>
                         <br>
                         <a class="list__harga" href="harga/mlbb.html" target="_blank" rel="noopener noreferrer">Cek Harga Lengkap...</a>
                         <br>
